--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -8,34 +8,114 @@ ul {
     list-style-type: none;
 }
 
-.container {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    align-items: flex-start;
+@media screen and (min-width: 450px) {
+    .container {
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: flex-start;
 
-    position: absolute;
-    top: 50%;
-    left: 42%;
-    right: 50%;
+        position: absolute;
+        top: 50%;
+        left: 38%;
 
-    transform: translateY(-50%);
-    overflow-y: hidden;
+        transform: translateY(-50%);
+        overflow-y: hidden;
 
-    height: calc(100vh - 100px);
+        height: calc(100vh - 15vh);
+    }
+
+    .container svg {
+        transform: scale(1.2);
+        margin: 0vh 0vh;
+        padding: 0 1vh;
+    }
+
+    .cardList {
+        margin: 0 1vh;
+    }
+
+    .cardList li {
+        margin: 0px 0px;
+    }
+
+    .cardList span li svg {
+        max-width: 75px;
+        margin: 0;
+    }
+
+    .firstCol li {
+        opacity: 0.6;
+    }
+
+    .secondCol {
+        opacity: 0.8;
+    }
+
+    .thirdCol {
+        opacity: 0.6;
+    }
+
+    .animatedUp li:first-child {
+        animation: animatedUpShadowDown 3s ease-in-out infinite;
+    }
+
+    .animatedUp li:nth-last-child(1) {
+        animation: animatedUpShadowUp 3s ease-in-out infinite;
+    }
+
+    .animatedDown li:first-child {
+        animation: animatedDownShadowDown 3s ease-in-out infinite;
+    }
+
+    .animatedDown li:nth-last-child(1) {
+        animation: animatedDownShadowUp 3s ease-in-out infinite;
+    }
+
+    .overlayLayout {
+        opacity: 1;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        box-shadow: inset 0 0 10vh 5vh #110A1D;
+        z-index: 1;
+    }
 }
 
-.cardList {
-    margin: 0 7.5px;
-}
+@media screen and (max-width: 450px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        margin-top: 5vh;
+    }
 
-.cardList li {
-    margin: 0px 0px;
-}
+    .cardList {
+        rotate: 90deg;
+    }
 
-.cardList li svg {
-    max-width: 75px;
-    margin: 0;
+    .container ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 18vh;
+        gap: 4vh;
+    }
+
+    .cardList span {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 4vh;
+    }
+
+    .overlayLayout {
+        opacity: 1;
+        width: 100%;
+        height: 55vh;
+        position: absolute;
+        box-shadow: inset 0 0 10vh 5vh #110A1D;
+        z-index: 1;
+    }
 }
 
 .animatedUp {
@@ -89,89 +169,5 @@ ul {
 
     100% {
         transform: translateY(-25vh);
-    }
-}
-
-.firstCol li {
-    opacity: 0.6;
-}
-
-.secondCol {
-    opacity: 0.8;
-}
-
-.thirdCol {
-    opacity: 0.6;
-}
-
-.animatedUp li:first-child {
-    animation: animatedUpShadowDown 3s ease-in-out infinite;
-}
-
-.animatedUp li:nth-last-child(1) {
-    animation: animatedUpShadowUp 3s ease-in-out infinite;
-}
-
-@keyframes animatedUpShadowUp {
-    0% {
-        opacity: 1;
-    }
-
-    50% {
-        opacity: 0.5;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes animatedUpShadowDown {
-    0% {
-        opacity: 0.5;
-    }
-
-    50% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0.5;
-    }
-}
-
-.animatedDown li:first-child {
-    animation: animatedDownShadowDown 3s ease-in-out infinite;
-}
-
-.animatedDown li:nth-last-child(1) {
-    animation: animatedDownShadowUp 3s ease-in-out infinite;
-}
-
-@keyframes animatedDownShadowUp {
-    0% {
-        opacity: 1;
-    }
-
-    50% {
-        opacity: 0.5;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes animatedDownShadowDown {
-    0% {
-        opacity: 0.5;
-    }
-
-    50% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0.5;
     }
 }
