--- a/src/components/Blog/Blog.module.css
+++ b/src/components/Blog/Blog.module.css
@@ -4,95 +4,192 @@
     font-family: "Lexend", sans-serif;
 }
 
-.container {
-    width: 50%;
-    display: flex;
-    justify-content: flex-end;
+@media screen and (min-width: 450px) {
+    .container {
+        width: 50%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .containerTitle {
+        color: #FFF;
+        font-family: "Lexend", sans-serif;
+        font-size: 3.5vh;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 4vh;
+
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 2vh;
+    }
+
+    .cardList {
+        display: flex;
+        width: 45vh;
+        flex-direction: column;
+        align-items: flex-start;
+
+        border-radius: 8vh;
+
+        border: 0.3vh solid #478BF9;
+        background: linear-gradient(145deg, rgba(255, 255, 255, 0.12) 60%, #ffffff2a 100%);
+
+        backdrop-filter: blur(10px);
+        height: 50vh;
+
+        padding: 0vh 0vh;
+    }
+
+    .listItem {
+        display: flex;
+        flex-wrap: wrap;
+
+        padding: 2vh 6vh;
+        margin: 2vh 1vh;
+
+        border-radius: 8vh;
+        background: #1E1231;
+    }
+
+    .listItem:hover {
+        cursor: pointer;
+        background: #478BF9;
+    }
+
+    .itemText {
+        color: #FFF;
+        font-family: "Lexend";
+        font-size: 2vh;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 2vh;
+    }
+
+    .itemDate {
+        color: #ffffff99;
+        font-family: "Futura PT", sans-serif;
+        font-size: 1.5vh;
+        font-style: normal;
+        font-weight: 450;
+        line-height: 1.5vh;
+        margin-top: 1vh;
+    }
+
+    .scrollable {
+        overflow: auto;
+        margin-right: 1vh;
+        border-radius: 8vh;
+        scrollbar-color: #478BF9 #FFFFFF1F;
+
+    }
+
+    .scrollable::-webkit-scrollbar {
+        width: 1vh;
+    }
+
+    .scrollable::-webkit-scrollbar-thumb {
+        background: #478BF9;
+        border-radius: 0.5vh;
+    }
+
+    .scrollable::-webkit-scrollbar-track {
+        background: #FFFFFF1F;
+        margin: 7vh 0px;
+    }
 }
 
-.containerTitle {
-    color: #FFF;
-    font-family: "Lexend", sans-serif;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 40px;
+@media screen and (max-width: 450px) {
+    .container {
+        width: 100%;
+        margin-top: 5vh;
+        display: flex;
+        justify-content: center;
+    }
 
-    text-align: center;
-    margin: 0 auto;
-    margin-bottom: 16px;
-}
+    .containerTitle {
+        color: #FFF;
+        font-family: "Lexend", sans-serif;
+        font-size: 6vh;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 4vh;
 
-.cardList {
-    display: flex;
-    width: 400px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16px;
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 2vh;
+    }
 
-    border-radius: 75px;
+    .cardList {
+        width: 90%;
 
-    border: 3px solid #478BF9;
-    background: linear-gradient(145deg, rgba(255, 255, 255, 0.12) 60%, #ffffff2a 100%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        /* align-items: flex-start; */
 
-    backdrop-filter: blur(10px);
-    height: 450px;
-    overflow-y: scroll;
-}
+        border-radius: 8vh;
 
-.listItem {
-    display: flex;
-    flex-direction: column;
+        border: 0.3vh solid #478BF9;
+        background: linear-gradient(145deg, rgba(255, 255, 255, 0.12) 60%, #ffffff2a 100%);
 
-    border-radius: 75px;
-    background: #1E1231;
+        backdrop-filter: blur(10px);
+        height: 75vh;
 
-    padding: 8px 48px;
-    margin: 16px;
-}
+        padding: 0vh 0vh;
+    }
 
-.listItem:hover {
-    cursor: pointer;
-    background: #478BF9;
-}
+    .listItem {
+        display: flex;
+        flex-wrap: wrap;
 
-.itemText {
-    color: #FFF;
-    font-family: "Lexend";
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
-}
+        padding: 2vh 6vh;
+        margin: 2vh 1vh;
 
-.itemDate {
-    color: #ffffff99;
-    font-family: "Futura PT", sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 450;
-    line-height: 16px;
-    margin-top: 14px;
-}
+        border-radius: 8vh;
+        background: #1E1231;
+    }
 
-.scrollable {
-    overflow: auto;
-    margin-right: 20px;
-    scrollbar-color: #478BF9 #FFFFFF1F;
+    .itemText {
+        color: #FFF;
+        font-family: "Lexend";
+        font-size: 2.5vh;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 3vh;
+    }
 
-}
+    .itemDate {
+        color: #ffffff99;
+        font-family: "Futura PT", sans-serif;
+        font-size: 2vh;
+        font-style: normal;
+        font-weight: 450;
+        line-height: 2vh;
+        margin-top: 1vh;
+    }
 
-.scrollable::-webkit-scrollbar {
-    width: 8px;
-}
+    .scrollable {
+        overflow: auto;
+        margin-right: 1vh;
+        border-radius: 8vh;
+        scrollbar-color: #478BF9 #FFFFFF1F;
 
-.scrollable::-webkit-scrollbar-thumb {
-    background: #478BF9;
-    border-radius: 4px;
-    /* margin: 100px 0px; */
-}
+    }
 
-.scrollable::-webkit-scrollbar-track {
-    background: #FFFFFF1F;
-    margin: 75px 0px;
+    .scrollable::-webkit-scrollbar {
+        width: 1vh;
+    }
+
+    .scrollable::-webkit-scrollbar-thumb {
+        background: #478BF9;
+        border-radius: 0.5vh;
+    }
+
+    .scrollable::-webkit-scrollbar-track {
+        background: #FFFFFF1F;
+        margin: 7vh 0px;
+    }
 }
