--- a/src/components/BecomePartner/BecomePartner.module.css
+++ b/src/components/BecomePartner/BecomePartner.module.css
@@ -6,6 +6,7 @@
 
 .container {
     width: 50%;
+    z-index: 1;
 }
 
 .card {
@@ -76,7 +77,6 @@
 @media screen and (max-width: 450px) {
     .container {
         width: 100%;
-        /* margin-top: 70px; */
         margin-top: 10vh;
     }
 
